--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,325 @@
-/* Здесь вы напишете основную часть стилей страницы.
-
-Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
-✦ like-icon — для svg-иконки анимированного сердца
-✦ card__like-button — для кнопки Like рядом с иконкой
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
-✦ button__text — для обозначения текстового элемента внутри кнопки
-
-*/
-
 .page {
+  color: var(--accent-color, #000000);
+  font-family: var(--main-font-family, sans-serif);
+  font-size: var(--main-font-size, 18px);
+  background-color: var(--bg-color, #ffffff);
+  background-image: var(
+    --bg-img,
+    repeating-linear-gradient(
+      90deg,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      180deg,
+      #e7e7e7,
+      #1a1a1a 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(180deg, #e7e7e7 0.01%, #1a1a1a)
+  );
+  background-size: cover;
+  background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-variation-settings: "wght" var(--text-font-weight, 400);
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 100px auto 100px auto;
+  border: 2px solid var(--accent-color, #000000);
+  font-family: var(--accent-font-family, sans-serif);
+  text-align: center;
+  background-color: var(--bg-color, #ffffff);
+  max-inline-size: 700px;
+  min-block-size: 364px;
+}
+.header__title {
+  margin-block-end: 18px;
+  padding-top: 136px;
+  font-size: var(
+    --main-title-font-size,
+    clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem)
+  );
+  text-align: center;
+  text-transform: uppercase;
+}
+.header__text {
+  margin-block-end: 24px;
+  font-size: var(
+    --title-font-size,
+    clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem)
+  );
+  text-align: center;
+  text-transform: uppercase;
+}
+.container {
+  margin-inline: auto;
+  max-inline-size: var(--max-inline-size, 696px);
+}
+
+.content__post {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 47px;
+  margin: 0;
+  margin-block-end: 50px;
+  padding: 0;
+  list-style-type: none;
+}
+.card {
+  background-color: var(--bg-color, #ffffff);
+}
+.card__title {
+  display: flex;
+  align-items: center;
+  border: 2px solid var(--accent-color, #000000);
+  border-bottom: 0px;
+  padding: 4px 10px;
+  font-size: var(--main-font-size, 18px);
+  font-variation-settings: "wght" var(--title-font-weight, 700);
+}
+.card__poster {
+  position: relative;
+  border: 2px solid var(--accent-color, #000000);
+  border-bottom: 0px;
+}
+.card__poster-image {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  inline-size: 100%;
+  aspect-ratio: 1 / 1;
+}
+.card__poster-label {
+  position: absolute;
+  z-index: 1;
+  opacity: 0.5;
+  color: var(--accent-color, #000000);
+  font-family: var(--accent-font-family), monospace;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: normal;
+  text-shadow: -1px 0 var(--accent-color, #000000),
+    0 1px var(--accent-color, #000000), 1px 0 var(--accent-color, #000000),
+    0 -1px var(--accent-color, #000000);
+  inset-block-start: 25px;
+  inset-inline-end: 25px;
+  mix-blend-mode: hard-light;
+}
+
+.card__poster-label {
+  text-shadow: none;
+  text-stroke: 1px var(--bg-color, #ffffff);
+  -webkit-text-stroke: 1px var(--bg-color, #ffffff);
+}
+
+.card__content {
+  border: 2px solid var(--accent-color, #000000);
+  padding: 25px;
+}
+.card__content-text {
+  margin-block-end: 27px;
+  color: var(--accent-color, #000000);
+  font-family: var(--main-font-family, sans-serif);
+  font-weight: var(--text-font-weight, 400);
+  font-size: var(--main-font-size, 18px);
+}
+.card__buttons {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  gap: 4px;
+  inline-size: 100%;
+}
+.card__icon-button {
+  position: relative;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  max-block-size: 38px;
+}
+.card__icon-button:focus {
+  outline: none;
+}
+.card__icon-button:focus-visible {
+  border: 2px solid var(--accent-color, #000000);
+  transition: border 0.3s ease-in-out;
+}
+.btn {
+  position: relative;
+  border: 2px solid var(--accent-color, #000000);
+  padding: 9px 17px;
+  color: var(--accent-color, #000000);
+  font-family: var(--accent-font-family, fantasy);
+  background: var(--bg-color, #ffffff);
+  cursor: pointer;
+}
+.btn:focus {
+  outline: none;
+}
+.btn:focus-visible {
+  box-shadow: 2px 2px 0px 0px var(--accent-color, #000000);
+  transition: box-shadow 0.3s ease-in-out;
+}
+.button__text {
+  position: relative;
+  z-index: 1;
+  color: var(--btn-text-color, #ffffff);
+  font-size: 14px;
+  line-height: 90%;
+  mix-blend-mode: difference;
+}
+.btn:hover .button__text {
+  mix-blend-mode: difference;
+}
+.btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: currentColor;
+  transition: transform 0.5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+.btn:hover::before {
+  transform: scaleX(1);
+}
+.card__like-button {
+  padding: 9px 17px;
+  inline-size: 130px;
+}
+
+.filter__one {
+  filter: saturate(20%) brightness(1.2);
+}
+.filter__two {
+  filter: saturate(350%);
+}
+.filter__three {
+  filter: hue-rotate(30deg);
+}
+.filter__four {
+  filter: invert(80%);
+}
+.filter__five {
+  filter: sepia(90%) grayscale(10%);
+}
+.filter__six {
+  filter: blur(10px);
+}
+.filter__seven {
+  filter: saturate(250%) hue-rotate(110deg) blur(0.2rem) brightness(80%)
+    contrast(50%);
+}
+
+.save__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-block-end: 103px;
+}
+.save-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  inline-size: 335px;
+  block-size: 51px;
+}
+.save-icon {
+  fill: var(--btn-text-color, #ffffff);
+  inline-size: 21px;
+  block-size: 21px;
+  mix-blend-mode: difference;
+}
+
+.dialog {
+  width: clamp(341px, 50%, 357px);
+  border: 2px solid var(--accent-color, #000000);
+  padding: 31.5px 32.5px 30.5px 26px;
+  overflow: hidden;
+  color: var(--accent-color, #000000);
+  font-family: var(--accent-font-family, monospace);
+  font-size: 14px;
+  text-transform: uppercase;
+  background: var(--bg-color, #ffffff);
+}
+dialog[open] {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+.dialog::backdrop {
+  opacity: 0.75;
+  background-color: #000000;
+}
+.dialog__content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+.dialog__save-icon {
+  fill: var(--btn-text-color, #ffffff);
+  inline-size: 39px;
+  block-size: 39px;
+  mix-blend-mode: difference;
+}
+.dialog__text {
+  color: var(--accent-color, #000000);
+  font-size: 14px;
+  line-height: 150%; /* 21px */
+  text-transform: uppercase;
+  max-inline-size: 234px;
+}
+.dialog__close-button {
+  border: 2px solid var(--accent-color, #000000);
+  padding: 9px 17px;
+  font-size: 14px;
+  text-align: center;
+  text-transform: uppercase;
+  cursor: pointer;
+  inline-size: 293px;
+  block-size: 38px;
+}
+
+@media (width <= 376px) {
+  .header {
+    margin: 100px auto 100px auto;
+    min-block-size: 326px;
+  }
+  .header__title {
+    padding-top: 120px;
+  }
+  .save-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    inline-size: 306px;
+    block-size: 80px;
+  }
+  .save-icon {
+    inline-size: 28px;
+    block-size: 28px;
+  }
+  .dialog__text {
+    max-inline-size: 198px;
+  }
 }
