--- a/styles/style.css
+++ b/styles/style.css
@@ -116,10 +116,15 @@
   mix-blend-mode: hard-light;
 }
 
-.card__poster-label {
-  text-shadow: none;
-  text-stroke: 1px var(--bg-color, #ffffff);
-  -webkit-text-stroke: 1px var(--bg-color, #ffffff);
+@supports (
+  (text-stroke: 1px var(--bg-color, #ffffff)) or
+    (-webkit-text-stroke: 1px var(--bg-color, #ffffff))
+) {
+  .card__poster-label {
+    text-shadow: none;
+    text-stroke: 1px var(--bg-color, #ffffff);
+    -webkit-text-stroke: 1px var(--bg-color, #ffffff);
+  }
 }
 
 .card__content {
