--- a/styles/variables.css
+++ b/styles/variables.css
@@ -20,8 +20,8 @@
     ),
     repeating-linear-gradient(
       180deg,
-      #e7e7e7,
-      #1a1a1a 2px,
+      #d3d3d3,
+      #d3d3d3 2px,
       transparent 2px,
       transparent 4px
     ),
